# planning-win

./: .gitignore  README.md  Tessera Demo.mov  eli5.md  hugediagram.md  largediagram.md  presentation.md  roles_and_tasks.md  tech_stack.md  technical.md  technical_summary.md
concrete_plans/: directories.md  explanation.md
concrete_plans/compute_client/: index.md  task_completion.md
concrete_plans/heartbeat/: oracle_server.md
concrete_plans/heartbeat_oracle/: index.md
concrete_plans/model_deployment/: index.md
concrete_plans/smart_contracts/: index.md  proof_of_sampling.md
demo/: deno.json
demo/cli/compute-node-cli/: README.md  main.py  pyproject.toml  setup.py
demo/cli/compute-node-cli/cli/: config.py
demo/cli/compute-node-cli/compute_node_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo/cli/splitup-node/: README.md  output.pkl  pyproject.toml  requirements.txt  setup.py
demo/cli/splitup-node/cli/: commands.py  config.py  models.py  services.py
demo/cli/splitup-node/compute_node_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
demo/cli/splitup-node/tests/: conftest.py  test_cli.py
demo/infra/: deploy.sh  (+1 more)
demo/services/compute-service/: README.md  main.py  pyproject.toml
demo/services/compute-service/src/: cache_models.py  environment.py  execution.py  logger.py  main.py  models.py  notification.py  result.py  storage.py  util.py
demo/services/compute-service/src/tinygrad_backend/: core.py  graph_rewriting.py  serialize_tensors.py  storage_manager.py  types.py
diagrams/: 1_deployment.md  2_node-configuration.md  3.md  4-PoSP.md  5.md  6.md  7.md  9.md
infra/: .gitignore  README.md  package-lock.json  package.json
old_diagrams/: 2_node-configuration.md  4-PoSP.md  5.md
system_diagrams/: main.md
v1/: explanation.md
(+70 files in other folders)
