[project]
name = "compute-node-cli"
version = "0.1.0"
description = "A command-line interface for managing compute nodes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "click",
    "python-dotenv"
]

[project.scripts]
splitup-node = "cli.commands:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
