[project]
name = "compute-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "boto3>=1.37.18",
    "botocore>=1.37.18",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "numpy>=2.2.4",
    "pathlib>=1.0.1",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "tinygrad>=0.10.2",
    "uuid>=1.30",
    "uvicorn>=0.34.0",
]
